--- a/page-login.html
+++ b/page-login.html
@@ -33,21 +33,21 @@
 								<div class="logo text-center"><img src="assets/img/logo-dark.png" alt="Klorofil Logo"></div>
 								<p class="lead">Login to your account</p>
 							</div>
-							<form class="form-auth-small" action="index.php">
+							<form class="form-auth-small" method="post" action="login.php" id="login-form">
 								<div class="form-group">
-									<label for="signin-email" class="control-label sr-only">Email</label>
-									<input type="email" class="form-control" id="signin-email" value="samuel.gold@domain.com" placeholder="Email">
+									<label for="user_id" class="control-label sr-only">Email</label>
+									<input type="text" name="emp_user_id" class="form-control" id="user_id" placeholder="Email">
 								</div>
 								<div class="form-group">
-									<label for="signin-password" class="control-label sr-only">Password</label>
-									<input type="password" class="form-control" id="signin-password" value="thisisthepassword" placeholder="Password">
+									<label for="password" class="control-label sr-only">Password</label>
+									<input type="password" name="password" class="form-control" id="password" placeholder="Password">
 								</div>
-								<div class="form-group clearfix">
+								<!--div class="form-group clearfix">
 									<label class="fancy-checkbox element-left">
 										<input type="checkbox">
 										<span>Remember me</span>
 									</label>
-								</div>
+								</div-->
 								<button type="submit" class="btn btn-primary btn-lg btn-block">LOGIN</button>
 								<div class="bottom">
 									<span class="helper-text"><i class="fa fa-lock"></i> <a href="#">Forgot password?</a></span>
@@ -69,5 +69,6 @@
 	</div>
 	<!-- END WRAPPER -->
 </body>
-
+<script>
+</script>
 </html>
